fix navbar on smaller screen

--- a/sheets/stylesheet.css
+++ b/sheets/stylesheet.css
@@ -116,6 +116,8 @@ a {
     font-family: 'Lato', Verdana, Helvetica, sans-serif;
     font-size: 24px;
     font-weight: 1000;
+    align-self: auto;
+    vertical-align: middle;
 }
 
 .navbar {
